// SPDX-FileCopyrightText: 2024 Mass Labs
//
// SPDX-License-Identifier: MIT

syntax = "proto3";

package market.mass;

import "base_types.proto";
import "google/protobuf/timestamp.proto";

// Order can be used to represent current state of an order.
// This is not transmitted over the event stream directly.
message Order {
  ObjectId id = 1;
  repeated OrderedItem items = 2;

  // can be used for note keeping like delivery statuses and tracking codes
  string shipping_status = 3;

  optional google.protobuf.Timestamp canceled_at = 4;

  optional google.protobuf.Timestamp commited_at = 5;

  optional AddressDetails invoice_address = 6;
  // no shipping addr assumes invoice addr
  optional AddressDetails shipping_address = 7;
  optional google.protobuf.Timestamp address_updated_at = 8;

  // mandatory if state was commited
  optional Payee chosen_payee = 9;
  optional ShopCurrency chosen_currency = 10;
  optional PaymentDetails payment_details = 11;
  optional google.protobuf.Timestamp payment_details_created_at = 12;

  repeated OrderTransaction payment_transactions = 13;
}
